# pymvc-fastapi

./: .gitignore  README.md  pyproject.toml
materials/glitchtip/: docker-compose.yml
src/mybootstrap_mvc_fastapi_itskovichanton/: error_handler.py  middleware_logging.py  middleware_stats.py  presenters.py  utils.py
tests/: app.py  config.yml  controller.py  di.py  main.py  server.py
